--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
   <head>
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <title></title>
   </head>
 
 
   <body>
+    <h1>
+      titulo
+    </h1>
 
   <div class= "yelow"> </div>
   <div class= "black"> </div>
   <div class= "red"></div>
 
-  <script src ="../js/app.js"></script>
+  <script src ="js/app.js"></script>
 
   </body>
 
